[gd_scene load_steps=2 format=3 uid="uid://placeholder_result"]

[ext_resource type="Script" path="res://scenes/result/ResultScene.gd" id="1"]

[node name="ResultScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CenterContent" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ResultLabel" type="Label" parent="CenterContent"]
layout_mode = 2
text = "VICTORY!"
horizontal_alignment = 1

[node name="GoldRewardLabel" type="Label" parent="CenterContent"]
layout_mode = 2
text = "Gold +5"
horizontal_alignment = 1

[node name="HealthLabel" type="Label" parent="CenterContent"]
layout_mode = 2
text = "HP: 5"
horizontal_alignment = 1

[node name="MVPContainer" type="VBoxContainer" parent="CenterContent"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="MVPNameLabel" type="Label" parent="CenterContent/MVPContainer"]
layout_mode = 2
text = "MVP: ---"
horizontal_alignment = 1

[node name="MVPDamageLabel" type="Label" parent="CenterContent/MVPContainer"]
layout_mode = 2
text = "Total Damage: 0"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContent"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="ContinueButton" type="Button" parent="CenterContent"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "Continue"
